--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,16 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This Blog was created by following the tutorial provided by JumpStart (http://tutorials.jumpstartlab.com/projects/blogger.html#i3:-tagging).
+By Andrew Graham-Yooll
+The CSS was also provided by JumpStart.
 
-Things you may want to cover:
 
-* Ruby version
 
-* System dependencies
+* Ruby version = 2.2.1p85 (2015-02-26 revision 49769)
 
-* Configuration
+* Rails Version =  4.2.5.1
 
-* Database creation
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
 
 
 Please feel free to use a different markup language if you do not plan to run
